--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -5,6 +5,9 @@
  */
 
 @import "@fontsource/fira-mono";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --font-body: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
@@ -15,6 +18,9 @@
 
 html {
   @apply select-none;
+
+  -webkit-tap-highlight-color: rgba(128, 128, 128, 0.5);
+  scrollbar-color: rgba(255, 255, 255, 0.1) rgba(0, 0, 0, 0.05);
 }
 
 html,
@@ -36,4 +42,41 @@ body {
 
 .wails-draggable {
   --wails-draggable: drag;
+}
+
+::-moz-selection,
+::selection {
+  background-color: rgb(var(--color-primary-500) / 0.3);
+}
+
+::-webkit-scrollbar {
+  width: 0.4rem;
+  height: 0.4rem;
+}
+
+::-webkit-scrollbar-track {
+  padding-left: 1px;
+  padding-right: 1px;
+  /* background-color: rgb(var(--color-surface-50)) !important; */
+  /* background-color: #383838 !important; */
+  /* @apply !bg-slate-800; */
+}
+
+::-webkit-scrollbar-thumb {
+  /* background-color: rgb(var(--color-surface-400)); */
+  /* background-color: #383838 !important; */
+  @apply !bg-slate-900;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
